Fixed img pointer to only point to a single placeholder image

--- a/css/default.css
+++ b/css/default.css
@@ -344,6 +344,12 @@ footer {
 	flex-direction: row;
 }
 
+/* Character art flexbox */
+.flex-art {
+    display: flex;
+    flex-direction: column;
+}
+
 /* ┌───────────────┐
  * │ Other classes │
  * └───────────────┘
