--- a/css/default.css
+++ b/css/default.css
@@ -212,6 +212,7 @@ footer {
 /* Malayalam script */
 .font-malayalam {
 	font-family: Gayathri, "Noto Sans Malayalam" sans-serif;
+    font-size: 125%;
 }
 
 /* Mongolian script */
