Added font-size property to class "font-devanagari"

--- a/css/default.css
+++ b/css/default.css
@@ -182,6 +182,7 @@ footer {
 /* Devanagari */
 .font-devanagari {
 	font-family: Chandas, "Noto Serif Devanagari", "Sanskrit Text", Mangal, serif;
+    font-size: 125%;
 }
 
 /* Georgian script */
