--- a/css/menu.css
+++ b/css/menu.css
@@ -62,56 +62,56 @@ body {
 
 /* Heading 1 */
 h1 {
-	font-size: 32pt;
-	font-family: "ヒラギノ明朝 Pro W6", "Noto Serif JP", serif;
-	line-height: 1em;
-	text-align: center;
-	margin-bottom: auto;
+    font-size: 32pt;
+    font-family: "ヒラギノ明朝 Pro W6", "Noto Serif CJK JP", "Noto Serif JP", serif;
+    line-height: 1em;
+    text-align: center;
+    margin-bottom: auto;
 }
 
 /* Heading 2 */
 h2 {
-	font-size: 28pt;
-	font-family: "ヒラギノ明朝 Pro W6", "Noto Serif JP", serif;
-	line-height: 1em;
-	text-align: center;
-	margin-bottom: auto;
+    font-size: 28pt;
+    font-family: "ヒラギノ明朝 Pro W6", "Noto Serif CJK JP", "Noto Serif JP", serif;
+    line-height: 1em;
+    text-align: center;
+    margin-bottom: auto;
 }
 
 /* Heading 3 */
 h3 {
-	font-size: 24pt;
-	font-family: "ヒラギノ明朝 Pro W6", "Noto Serif JP", serif;
-	line-height: 1em;
-	text-align: center;
-	margin-bottom: auto;
+    font-size: 24pt;
+    font-family: "ヒラギノ明朝 Pro W6", "Noto Serif CJK JP", "Noto Serif JP", serif;
+    line-height: 1em;
+    text-align: center;
+    margin-bottom: auto;
 }
 
 /* Heading 4 */
 h4 {
-	font-size: 18pt;
-	font-family: "ヒラギノ角ゴ Std W8", "Noto Sans JP", sans-serif;
-	line-height: 1em;
-	text-align: center;
-	margin-bottom: auto;
+    font-size: 18pt;
+    font-family: "ヒラギノ角ゴ Std W8", "Noto Sans CJK JP", "Noto Sans JP", sans-serif;
+    line-height: 1em;
+    text-align: center;
+    margin-bottom: auto;
 }
 
 /* Heading 5 */
 h5 {
-	font-size: 16pt;
-	font-family: "ヒラギノ角ゴ Pro W6", "Noto Sans JP", sans-serif;
-	line-height: 1em;
-	text-align: center;
-	margin-bottom: auto;
+    font-size: 16pt;
+    font-family: "ヒラギノ角ゴ Pro W6", "Noto Sans CJK JP", "Noto Sans JP", sans-serif;
+    line-height: 1em;
+    text-align: center;
+    margin-bottom: auto;
 }
 
 /* Heading 6 */
 h6 {
-	font-size: 14pt;
-	font-family: "ヒラギノ角ゴ Pro W6", "Noto Sans JP", sans-serif;
-	line-height: 1em;
-	text-align: center;
-	margin-bottom: auto;
+    font-size: 14pt;
+    font-family: "ヒラギノ角ゴ Pro W6", "Noto Sans CJK JP", "Noto Sans JP", sans-serif;
+    line-height: 1em;
+    text-align: center;
+    margin-bottom: auto;
 }
 
 /* ┌─────────────────────────┐
