Imported Noto Sans Myanmar

--- a/css/default.css
+++ b/css/default.css
@@ -35,6 +35,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP'); /* Imports Noto Sans Japanese */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP'); /* Imports Noto Serif Japanese */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar'); /* Imports Noto Sans Myanmar */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans'); /* Imports Noto Sans */
 
 /* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
