--- a/css/default.css
+++ b/css/default.css
@@ -37,6 +37,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP'); /* Imports Noto Serif Japanese */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar'); /* Imports Noto Sans Myanmar */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC'); /* Imports Noto Sans Simplified Chinese */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC'); /* Imports Noto Sans Traditional Chinese */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans'); /* Imports Noto Sans */
 
 /* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
@@ -179,7 +180,7 @@ footer {
 
 /* Traditional Chinese */
 .font-tradhanzi {
-	font-family: 'Noto Sans CJK TC', 'DFKai-SB', sans-serif;
+	font-family: 'Noto Sans CJK TC', 'DFKai-SB', 'Noto Sans TC', sans-serif;
 }
 
 /* Devanagari */
