Imported Noto Serif Devanagari

--- a/css/default.css
+++ b/css/default.css
@@ -38,6 +38,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar'); /* Imports Noto Sans Myanmar */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC'); /* Imports Noto Sans Simplified Chinese */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC'); /* Imports Noto Sans Traditional Chinese */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Devanagari'); /* Imports Noto Serif Devanagari */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans'); /* Imports Noto Sans */
 
 /* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
