--- a/css/default.css
+++ b/css/default.css
@@ -40,6 +40,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC'); /* Imports Noto Sans Traditional Chinese */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Devanagari'); /* Imports Noto Serif Devanagari */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian'); /* Imports Noto Sans Georgian */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR'); /* Imports Noto Sans Korean */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans'); /* Imports Noto Sans */
 
 /* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
