Imported Noto Sans Malayalam

--- a/css/default.css
+++ b/css/default.css
@@ -42,6 +42,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Devanagari'); /* Imports Noto Serif Devanagari */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian'); /* Imports Noto Sans Georgian */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR'); /* Imports Noto Sans Korean */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam'); /* Imports Noto Sans Malayalam */
 
 /* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  * ┃ Styling for specific elements ┃
