Imported Noto Sans Mongolian

--- a/css/default.css
+++ b/css/default.css
@@ -43,6 +43,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian'); /* Imports Noto Sans Georgian */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR'); /* Imports Noto Sans Korean */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam'); /* Imports Noto Sans Malayalam */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mongolian'); /* Imports Noto Sans Mongolian */
 
 /* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  * ┃ Styling for specific elements ┃
