Imported Noto Naskh Arabic

--- a/css/default.css
+++ b/css/default.css
@@ -44,6 +44,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR'); /* Imports Noto Sans Korean */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam'); /* Imports Noto Sans Malayalam */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mongolian'); /* Imports Noto Sans Mongolian */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic'); /* Imports Noto Naskh Arabic */
 
 /* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  * ┃ Styling for specific elements ┃
