Imported Noto Nastaliq Urdu

--- a/css/default.css
+++ b/css/default.css
@@ -45,6 +45,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam'); /* Imports Noto Sans Malayalam */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mongolian'); /* Imports Noto Sans Mongolian */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic'); /* Imports Noto Naskh Arabic */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu') /* Imports Noto Nastaliq Urdu */
 
 /* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  * ┃ Styling for specific elements ┃
