Imported Noto Serif Tibetan

--- a/css/default.css
+++ b/css/default.css
@@ -46,6 +46,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mongolian'); /* Imports Noto Sans Mongolian */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic'); /* Imports Noto Naskh Arabic */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu'); /* Imports Noto Nastaliq Urdu */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Tibetan'); /* Imports Noto Serif Tibetan */
 
 /* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  * ┃ Styling for specific elements ┃
