--- a/css/menu.css
+++ b/css/menu.css
@@ -33,8 +33,11 @@
  *
  */
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP'); /* Imports Noto Sans Japanese */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP'); /* Imports Noto Serif Japanese */
+/* Noto Sans Japanese */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP');
+
+/* Noto Serif Japanese */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP');
 
 /* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  * ┃ Styling for specific elements ┃
