--- a/css/default.css
+++ b/css/default.css
@@ -86,12 +86,12 @@
  */
 
 body {
-	font-family: 'ヒラギノ丸ゴ Pro W4', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
-	font-size: 14pt;
-	background-color: black;
-	color: white;
-	padding-right: 2px;
-	padding-left: 2px;
+    font-family: 'ヒラギノ丸ゴ Pro W4', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
+    font-size: 14pt;
+    background-color: black;
+    color: white;
+    padding-right: 2px;
+    padding-left: 2px;
 }
 
 /* ┌─────────────────────────┐
@@ -101,11 +101,11 @@ body {
 
 /* Heading 1 */
 h1 {
-	font-size: 32pt;
-	font-family: 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
-	line-height: 1em;
-	margin-bottom: auto;
-	text-align: center;
+    font-size: 32pt;
+    font-family: 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
+    line-height: 1em;
+    margin-bottom: auto;
+    text-align: center;
 }
 
 /* Heading 2 */
@@ -151,7 +151,7 @@ h5 {
 
 /* Furigana / ふりがな */
 rt {
-	font-size: 0.55em; /* see https://www.w3.org/TR/jlreq/?lang=en#ruby_and_emphasis_dots for more details */
+    font-size: 0.55em; /* see https://www.w3.org/TR/jlreq/?lang=en#ruby_and_emphasis_dots for more details */
 }
 
 /* ┌───────────────────────┐
@@ -160,9 +160,9 @@ rt {
  */
 
 header {
-	background-color: #222;
-	padding: 8px;
-	text-align: center;
+    background-color: #222;
+    padding: 8px;
+    text-align: center;
 }
 
 /* ┌────────────────────────┐
@@ -171,7 +171,7 @@ header {
  */
 
 article {
-	padding: 8px;
+    padding: 8px;
 }
 
 /* ┌───────────────────────┐
@@ -210,12 +210,12 @@ footer {
 
 /* Simplified Chinese */
 .font-simphanzi {
-	font-family: 'Noto Sans CJK SC', 'KaiTi', 'Noto Sans SC', sans-serif;
+    font-family: 'Noto Sans CJK SC', 'KaiTi', 'Noto Sans SC', sans-serif;
 }
 
 /* Traditional Chinese */
 .font-tradhanzi {
-	font-family: 'Noto Sans CJK TC', 'DFKai-SB', 'Noto Sans TC', sans-serif;
+    font-family: 'Noto Sans CJK TC', 'DFKai-SB', 'Noto Sans TC', sans-serif;
 }
 
 /* Devanagari */
@@ -275,7 +275,7 @@ footer {
 
 /* Tibetan script */
 .font-tibetan {
-	font-family: 'Tibetan Machine Uni', 'BabelStone Tibetan Slim', 'BabelStone Tibetan', 'Noto Serif Tibetan', serif;
+    font-family: 'Tibetan Machine Uni', 'BabelStone Tibetan Slim', 'BabelStone Tibetan', 'Noto Serif Tibetan', serif;
     font-size: 125%;
 }
 
@@ -286,83 +286,83 @@ footer {
 
 /* <div> for entire blocks */
 .section {
-	margin: 4px;
-	padding-top: 5px;
-	padding-right: 5px;
-	padding-left: 5px;
-	padding-bottom: 16px;
+    margin: 4px;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 16px;
 }
 
 /* <div> for galleries */
 .gallery {
-	padding-top: 8px;
-	padding-right: 4px;
-	padding-left: 4px;
-	padding-bottom: 0px;
+    padding-top: 8px;
+    padding-right: 4px;
+    padding-left: 4px;
+    padding-bottom: 0px;
 }
 
 /* <div> for headings */
 .heading {
-	padding-top: 4px;
-	padding-right: 8px;
-	padding-left: 8px;
-	padding-bottom: 4px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 8px;
+    padding-bottom: 4px;
 }
 
 /* <div> for body text */
 .body {
-	padding-top: 4px;
-	padding-right: 8px;
-	padding-left: 8px;
-	padding-bottom: 4px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 8px;
+    padding-bottom: 4px;
 }
 
 /* <div> for sprite (and their captions) */
 .sprite {
-	float: right;
-	box-sizing: border-box;
-	border-style: ridge;
-	border-width: 5px;
-	border-color: #666666;
-	padding: 1px;
-	margin: 4px;
-	background-color: #666666;
+    float: right;
+    box-sizing: border-box;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #666666;
+    padding: 1px;
+    margin: 4px;
+    background-color: #666666;
 }
 
 /* <div> for character art (and their captions) */
 .art-chara {
-	float: right;
-	box-sizing: border-box;
-	border-style: ridge;
-	border-width: 5px;
-	border-color: #666666;
-	padding: 1px;
-	margin: 4px;
-	background-color: #666666;
+    float: right;
+    box-sizing: border-box;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #666666;
+    padding: 1px;
+    margin: 4px;
+    background-color: #666666;
 }
 
 /* <div> for prides! */
 .pride {
-	float: right;
-	box-sizing: border-box;
-	border-style: ridge;
-	border-width: 5px;
-	border-color: hotpink;
-	padding: 1px;
-	margin: 4px;
-	background-color: hotpink;
+    float: right;
+    box-sizing: border-box;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: hotpink;
+    padding: 1px;
+    margin: 4px;
+    background-color: hotpink;
 }
 
 /* <div> for character refs */
 .art-ref {
-	float: left;
-	box-sizing: border-box;
-	border-style: ridge;
-	border-width: 5px;
-	border-color: #666666;
-	padding: 1px;
-	margin: 8px;
-	background-color: #666666;
+    float: left;
+    box-sizing: border-box;
+    border-style: ridge;
+    border-width: 5px;
+    border-color: #666666;
+    padding: 1px;
+    margin: 8px;
+    background-color: #666666;
 }
 
 /* <div> for character art (Gallery only) */
@@ -384,8 +384,8 @@ footer {
 
 /* Art Gallery flexbox */
 .flex-gallery {
-	display: flex;
-	flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
 /* Character art flexbox */
@@ -402,21 +402,21 @@ footer {
 
 /* Captions! */
 .caption {
-	padding: 0px;
-	margin: 2px;
+    padding: 0px;
+    margin: 2px;
 }
 
 /* Image borders (primarily for the pride flags) :3 */
 .border {
-	border-style: groove;
-	border-width: 2px;
-	border-color: #FEFEFA;
+    border-style: groove;
+    border-width: 2px;
+    border-color: #FEFEFA;
 }
 
 /* COMING AT SOME POINT!! */
 .coming-soon {
-	text-align: center;
-	font-size: 128pt;
+    text-align: center;
+    font-size: 128pt;
 }
 
 /* Header text */
@@ -430,4 +430,13 @@ footer {
     text-align: center;
     font-size: 16pt;
     font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;
+}
+
+/* Pride flags! :3 */
+.pride-flag {
+    border-style: groove;
+    border-width: 2px;
+    border-color: #FEFEFA;
+    width: 200px;
+    height: 125px;
 }
