--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,6 @@
-/* /-------------\
- * | default.css |
- * \-------------/
+/* ***************
+ * * default.css *
+ * ***************
  *
  * For `/html/*`, with exception of `/html/menu.html`
  *
