--- a/css/menu.css
+++ b/css/menu.css
@@ -44,6 +44,16 @@
  * ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
  */
 
+/* ┌────────────────────────┐
+ * │ Stylesheet for anchors │
+ * └────────────────────────┘
+ */
+
+/* Unvisited links */
+a:link {
+    color: #99c3ff;
+}
+
 /* ┌─────────────────────┐
  * │ Stylesheet for body │
  * └─────────────────────┘
@@ -51,9 +61,9 @@
 
 body {
     font-family: 'ヒラギノ角ゴ Pro W3', 'Noto Sans JP', sans-serif;
-    font-size: 12pt;
-    background-color: black;
-    color: lightgrey;
+    font-size: 1.19em;
+    background-color: #121212;
+    color: #e5e5e5;
     padding-right: 4px;
     padding-left: 4px;
 }
@@ -134,7 +144,7 @@ rt {
 
 /* Contents */
 .mokuji {
-    font-size: 32pt;
+    font-size: 2.63em;
     font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Medium', 'ＭＳ ゴシック', sans-serif;
     text-align: center;
     line-height: 0em;
