Code Cleanup III: Revenge of the Ugh [Part I]

--- a/css/default.css
+++ b/css/default.css
@@ -463,6 +463,16 @@ footer {
     text-align: left;
 }
 
+/* For furigana on <h2> elements */
+.head-furigana {
+    font-size: 37%;
+}
+
+/* For the staff credits page */
+.credits {
+    text-align: center;
+}
+
 /* ┌───────────────┐
  * │ Image classes │
  * └───────────────┘
