Added font "HGTakahashiReishotai" to fallback list

--- a/css/default.css
+++ b/css/default.css
@@ -112,7 +112,7 @@ body {
 /* Heading 1 */
 h1 {
     font-size: 2.63em;
-    font-family: 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
     line-height: 1em;
     margin-bottom: auto;
     text-align: center;
@@ -121,7 +121,7 @@ h1 {
 /* Heading 2 */
 h2 {
     font-size: 2.31em;
-    font-family: 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
     line-height: 1em;
     margin-bottom: auto;
     text-align: center;
@@ -130,7 +130,7 @@ h2 {
 /* Heading 3 */
 h3 {
     font-size: 2em;
-    font-family: 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
     line-height: 1em;
     margin-bottom: auto;
     text-align: center;
@@ -419,7 +419,7 @@ footer {
 
 /* Header text */
 .header-text {
-    font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
     font-size: 2.25em;
 }
 
