--- a/css/menu.css
+++ b/css/menu.css
@@ -75,8 +75,8 @@ body {
 
 /* Heading 1 */
 h1 {
-    font-size: 32pt;
-    font-family: 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
+    font-size: 2.63em;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
     line-height: 1em;
     text-align: center;
     margin-bottom: auto;
@@ -84,8 +84,8 @@ h1 {
 
 /* Heading 2 */
 h2 {
-    font-size: 28pt;
-    font-family: 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
+    font-size: 2.31em;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
     line-height: 1em;
     text-align: center;
     margin-bottom: auto;
@@ -93,8 +93,8 @@ h2 {
 
 /* Heading 3 */
 h3 {
-    font-size: 24pt;
-    font-family: 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
+    font-size: 2em;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
     line-height: 1em;
     text-align: center;
     margin-bottom: auto;
@@ -102,7 +102,7 @@ h3 {
 
 /* Heading 4 */
 h4 {
-    font-size: 18pt;
+    font-size: 1.5em;
     font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
     line-height: 1em;
     text-align: center;
@@ -111,16 +111,7 @@ h4 {
 
 /* Heading 5 */
 h5 {
-    font-size: 16pt;
-    font-family: 'ヒラギノ角ゴ Pro W6', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
-    line-height: 1em;
-    text-align: center;
-    margin-bottom: auto;
-}
-
-/* Heading 6 */
-h6 {
-    font-size: 14pt;
+    font-size: 1.31em;
     font-family: 'ヒラギノ角ゴ Pro W6', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
     line-height: 1em;
     text-align: center;
@@ -134,7 +125,7 @@ h6 {
 
 /* Furigana / ふりがな */
 rt {
-    font-size: 50%; /* see https://www.w3.org/TR/jlreq/?lang=en#ruby_and_emphasis_dots for more details */
+    font-size: 0.55em; /* see https://www.w3.org/TR/jlreq/?lang=en#ruby_and_emphasis_dots for more details */
 }
 
 /* ┌───────────────┐
@@ -145,7 +136,7 @@ rt {
 /* Contents */
 .mokuji {
     font-size: 2.63em;
-    font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Medium', 'ＭＳ ゴシック', sans-serif;
+    font-family: 'HGTakahashiReishotai', 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Medium', 'ＭＳ ゴシック', sans-serif;
     text-align: center;
     line-height: 0em;
 }
